--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             />
             <div class="panelRightTop">
               <h5>ТОП спікери</h5>
-              <img src="assets/images/header/Ellipse3.png" />
-              <img src="assets/images/header/Ellipse3.png" class="secondImg" />
-              <img src="assets/images/header/Ellipse3.png" />
+              <img src="assets/images/header/speakers/speaker1.svg" />
+              <img src="assets/images/header/speakers/speaker2.svg" class="secondImg" />
+              <img src="assets/images/header/speakers/speaker3.svg" />
             </div>
           </div>
         </div>
