--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <title>Genius</title>
-    <link href="./assets/styles/imports.css" rel="stylesheet" type="text/css" />
+    <link href="assets/styles/imports.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="wrapper wrapperMargin">
@@ -249,7 +249,7 @@
         <div class="containerForAreas">
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/business.svg"
+              src="assets/images/inWhichAreas/business.svg"
               alt="icon of business"
               class="icon"
             />
@@ -266,7 +266,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/education.svg"
+              src="assets/images/inWhichAreas/education.svg"
               alt="icon of education"
               class="icon"
             />
@@ -281,7 +281,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/finance.svg"
+              src="assets/images/inWhichAreas/finance.svg"
               alt="icon of finance"
               class="icon"
             />
@@ -295,7 +295,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/clients.svg"
+              src="assets/images/inWhichAreas/clients.svg"
               alt="icon of client"
               class="icon"
             />
@@ -311,7 +311,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/webDesigners.svg"
+              src="assets/images/inWhichAreas/webDesigners.svg"
               alt="icon of web-designers"
               class="icon"
             />
@@ -328,7 +328,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/medicine.svg"
+              src="assets/images/inWhichAreas/medicine.svg"
               alt="icon of medication"
               class="icon"
             />
@@ -343,7 +343,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/science.svg"
+              src="assets/images/inWhichAreas/science.svg"
               alt="icon of science"
               class="icon"
             />
@@ -357,7 +357,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/car.svg"
+              src="assets/images/inWhichAreas/car.svg"
               alt="icon of car"
               class="icon"
             />
@@ -371,7 +371,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/smm.svg"
+              src="assets/images/inWhichAreas/smm.svg"
               alt="icon of ssm"
               class="icon"
             />
@@ -389,7 +389,7 @@
           </div>
           <div class="blockOfArea">
             <img
-              src="./assets/images/inWhichAreas/it.svg"
+              src="assets/images/inWhichAreas/it.svg"
               alt="icon of it"
               class="icon"
             />
@@ -406,7 +406,7 @@
         </div>
         <div class="blockForSummary">
           <img
-            src="./assets/images/inWhichAreas/bubble.png"
+            src="assets/images/inWhichAreas/bubble.png"
             alt="bubble"
             class="bubbleImg"
           />
@@ -544,7 +544,7 @@
           <div class="blockForPerson">
             <div class="shadow"></div>
             <img
-              src="./assets/images/whoConductTraining/Boris.svg"
+              src="assets/images/whoConductTraining/Boris.svg"
               alt="Boris Drozak"
               class="personImg"
             />
@@ -560,7 +560,7 @@
           <div class="blockForPerson">
             <div class="shadow"></div>
             <img
-              src="./assets/images/whoConductTraining/uliana.svg"
+              src="assets/images/whoConductTraining/uliana.svg"
               alt="U.Lytwyn"
               class="personImg"
             />
@@ -573,7 +573,7 @@
           <div class="blockForPerson">
             <div class="shadow"></div>
             <img
-              src="./assets/images/whoConductTraining/violetta.svg"
+              src="assets/images/whoConductTraining/violetta.svg"
               alt="V.Loziuk"
               class="personImg"
             />
@@ -723,7 +723,7 @@
         <div class="containerForCards">
           <div class="card">
             <img
-              src="./assets/images/whatAwaitsYouOnCourse/workTasks.svg"
+              src="assets/images/whatAwaitsYouOnCourse/workTasks.svg"
               alt="icon homework task"
               class="icon"
             />
@@ -737,7 +737,7 @@
           </div>
           <div class="card">
             <img
-              src="./assets/images/whatAwaitsYouOnCourse/mentors.svg"
+              src="assets/images/whatAwaitsYouOnCourse/mentors.svg"
               alt="icon mentors"
               class="icon"
             />
@@ -752,7 +752,7 @@
           </div>
           <div class="card">
             <img
-              src="./assets/images/whatAwaitsYouOnCourse/comfortableTime.svg"
+              src="assets/images/whatAwaitsYouOnCourse/comfortableTime.svg"
               alt="icon comfortable time"
               class="icon"
             />
@@ -767,7 +767,7 @@
           </div>
           <div class="card">
             <img
-              src="./assets/images/whatAwaitsYouOnCourse/possibility.svg"
+              src="assets/images/whatAwaitsYouOnCourse/possibility.svg"
               alt="icon possibility"
               class="icon"
             />
@@ -781,7 +781,7 @@
           </div>
           <div class="card">
             <img
-              src="./assets/images/whatAwaitsYouOnCourse/dyplom.svg"
+              src="assets/images/whatAwaitsYouOnCourse/dyplom.svg"
               alt="icon dyplom"
               class="icon"
             />
@@ -844,7 +844,7 @@
         <div class="containerForBlocks">
           <div class="block">
             <img
-              src="./assets/images/howIsGoingTraining/practise.svg"
+              src="assets/images/howIsGoingTraining/practise.svg"
               alt=""
               class="image"
             />
@@ -859,7 +859,7 @@
           </div>
           <div class="block">
             <img
-              src="./assets/images/howIsGoingTraining/testing.svg"
+              src="assets/images/howIsGoingTraining/testing.svg"
               alt=""
               class="image"
             />
@@ -874,7 +874,7 @@
           </div>
           <div class="block">
             <img
-              src="./assets/images/howIsGoingTraining/session.svg"
+              src="assets/images/howIsGoingTraining/session.svg"
               alt=""
               class="image"
             />
@@ -889,7 +889,7 @@
           </div>
           <div class="block">
             <img
-              src="./assets/images/howIsGoingTraining/dyplom.svg"
+              src="assets/images/howIsGoingTraining/dyplom.svg"
               alt=""
               class="image"
             />
@@ -924,7 +924,7 @@
         <div class="containerForCards">
           <div class="card">
             <img
-              src="./assets/images/howUsedAI/smm.svg"
+              src="assets/images/howUsedAI/smm.svg"
               alt="icon ssm"
               class="image"
             />
@@ -940,7 +940,7 @@
           </div>
           <div class="card">
             <img
-              src="./assets/images/howUsedAI/webDesigners.svg"
+              src="assets/images/howUsedAI/webDesigners.svg"
               alt="icon webDesigners"
               class="image"
             />
@@ -954,7 +954,7 @@
           </div>
           <div class="card">
             <img
-              src="./assets/images/howUsedAI/it.svg"
+              src="assets/images/howUsedAI/it.svg"
               alt="icon it"
               class="image"
             />
@@ -969,7 +969,7 @@
         </div>
         <div class="summaryBlock">
           <img
-            src="./assets/images/howUsedAI/backgroungForSummary.svg"
+            src="assets/images/howUsedAI/backgroungForSummary.svg"
             alt="background of text"
             class="image"
           />
@@ -993,7 +993,7 @@
           <div class="panelContainer">
             <div class="panel">
               <img
-                src="/assets/icons/smallIcons/diplomaPurple.svg"
+                src="assets/icons/smallIcons/diplomaPurple.svg"
                 alt="Purple icon with diploma"
               />
               <p>
@@ -1005,7 +1005,7 @@
             </div>
             <div class="panel">
               <img
-                src="/assets/icons/smallIcons/purpleQr.svg"
+                src="assets/icons/smallIcons/purpleQr.svg"
                 alt="Purple icon with diploma"
               />
               <p>
@@ -1018,7 +1018,7 @@
             </div>
             <div class="panel">
               <img
-                src="/assets/icons/smallIcons/accessPurple.svg"
+                src="assets/icons/smallIcons/accessPurple.svg"
                 alt="Purple icon with diploma"
               />
               <p>
@@ -1122,28 +1122,28 @@
           <div class="topBelt">
             <div class="iconWithText">
               <img
-                src="/assets/icons/smallIcons/datapurple.svg"
+                src="assets/icons/smallIcons/datapurple.svg"
                 alt="purple calendar icon"
               />
               <span>30 квітня</span>
             </div>
             <div class="iconWithText">
               <img
-                src="/assets/icons/smallIcons/onlinePurple.svg"
+                src="assets/icons/smallIcons/onlinePurple.svg"
                 alt="purple calendar icon"
               />
               <span>online</span>
             </div>
             <div class="iconWithText">
               <img
-                src="/assets/icons/smallIcons/potikPurple.svg"
+                src="assets/icons/smallIcons/potikPurple.svg"
                 alt="purple calendar icon"
               />
               <span>3-й потік</span>
             </div>
             <div class="iconWithText">
               <img
-                src="/assets/icons/smallIcons/timePurple.svg"
+                src="assets/icons/smallIcons/timePurple.svg"
                 alt="purple calendar icon"
               />
               <span>3 місяці</span>
@@ -1182,12 +1182,12 @@
         <div class="rightPart">
           <div class="formBlock">
             <img
-              src="/assets/images/form/formDiscount.svg"
+              src="assets/images/form/formDiscount.svg"
               class="discount"
               alt="-50% discount"
             />
             <img
-              src="/assets/images/form/discountText.svg"
+              src="assets/images/form/discountText.svg"
               class="discountText"
               alt="-50% discount"
             />
@@ -1238,33 +1238,33 @@
         <div class="containerForCards">
           <div class="containerForOneImg">
             <img
-              src="./assets/images/whatSaingStudents/mainOpinion.svg"
+              src="assets/images/whatSaingStudents/mainOpinion.svg"
               alt="opinion of student"
               class="mainImg"
             />
           </div>
           <img
-            src="./assets/images/whatSaingStudents/mainOpinion.svg"
+            src="assets/images/whatSaingStudents/mainOpinion.svg"
             alt="opinion of student"
             class="darker"
           />
           <img
-            src="./assets/images/whatSaingStudents/mainOpinion.svg"
+            src="assets/images/whatSaingStudents/mainOpinion.svg"
             alt="opinion of student"
             class="darker"
           />
           <img
-            src="./assets/images/whatSaingStudents/mainOpinion.svg"
+            src="assets/images/whatSaingStudents/mainOpinion.svg"
             alt="opinion of student"
             class="darker"
           />
           <img
-            src="./assets/images/whatSaingStudents/mainOpinion.svg"
+            src="assets/images/whatSaingStudents/mainOpinion.svg"
             alt="opinion of student"
             class="darker"
           />
           <img
-            src="./assets/images/whatSaingStudents/mainOpinion.svg"
+            src="assets/images/whatSaingStudents/mainOpinion.svg"
             alt="opinion of student"
             class="darker"
           />
